gateway/1.11/modules/ROOT/pages/_partials/tracing-export.adoc
//tag::telemetry-exporter[]
[[export-otel-traces-from-monitoring-telemetry-exporter]]
== Export Traces from the Anypoint Monitoring Telemetry Exporter

To export traces to third party providers using the Anypoint Monitoring Telemetry Exporter, see xref:monitoring::telemetry-exporter.adoc[How to export telemetry data to third-party monitoring systems].

//end::telemetry-exporter[]

//tag::telemetry-exporter-note[]

To export traces using the Anypoint Monitoring Telemetry Exporter, first <<export-traces-to-anypoint-monitoring>>.

//end::telemetry-exporter-note[]

//tag::export-anypoint[]
[[export-traces-to-anypoint-monitoring]]
== Export Traces to Anypoint Monitoring

Edit and then apply this configuration resource to enable distributed tracing. This configuration resource applies to all API instances.
This example sets sampling to 0% for all traces, and sampling is configured on a per-API basis using policies.

[source,yaml]
----
apiVersion: gateway.mulesoft.com/v1beta1
kind: Configuration
metadata:
  name: tracing
  namespace: test-ns
spec:
  tracing:
    provider:
      type: anypoint
      properties:
        timeout: 10s # 
    sampling: # Set all sampling to 0% - this example shows enabling samping for the gateway, but only generating trace data for sampling on a per-API basis using the Tracing policy.
      client: 0
      random: 0
      overall: 0
      #
      # Add labels such as these example labels, if you want to configure labels globally. You can also configure labels on a per-API basis by using the Tracing policy.
      labels:
      - name: c-env-tag
        type: environment
        keyName: FLEX_NAME
        defaultValue: DEFAULT_VAL
      - name: c-header-tag
        type: requestHeader
        keyName: :method
        defaultValue: DEFAULT_METHOD
      - name: c-literal-tag
        type: literal
        defaultValue: the-tag     
----

//end::export-anypoint[]

//tag::export-grpc[]
[[export-traces-to-a-grpc-open-telemetry-endpoint]]
== Export Traces to a gRPC Open Telemetry Endpoint

To configure Open Telemetry tracing with a gRPC endpoint in Flex, use the following YAML configuration as an example:

[source,yaml]
----
apiVersion: gateway.mulesoft.com/v1beta1
kind: Configuration
metadata:
  name: tracing
  namespace: test-ns
spec:
  tracing:
    provider:
      type: opentelemetry
      properties:
        # otel collector service in this example it is installed in default namespace
        address: h2://splunk-otel-collector-agent.default.svc.cluster.local:4317
        serviceType: grpc
        serviceName: my-flex-name
        timeout: 10s
        resourceAttributes:
          any-key: any-value
  sampling:
    client: 100
    random: 100
    overall: 100
  labels:
    - name: c-env-tag
      type: environment
      keyName: FLEX_NAME
      defaultValue: DEFAULT_VAL
    - name: c-header-tag
      type: requestHeader
      keyName: :method
      defaultValue: DEFAULT_METHOD
    - name: c-literal-tag
      type: literal
      defaultValue: the-tag
----

//end::export-grpc[]


//tag::export-http[]
[[export-traces-to-a-http-open-telemetry-endpoint]]
== Export Traces to a HTTP Open Telemetry Endpoint

To configure Open Telemetry tracing with a HTTP endpoint, use the following YAML configuration as an example:

[source,yaml]
----
apiVersion: gateway.mulesoft.com/v1beta1
kind: Configuration
metadata:
  name: tracing
  namespace: test-ns
spec:
  tracing:
    provider:
      type: opentelemetry
      properties:
        address: http://opentelemetry:4318
        tracesUri: http://opentelemetry:4318/v1/traces
        serviceType: http
        serviceName: the-name
        timeout:     10s
        # headers to be added in the http request to otel
        httpHeaders:
          auth: samething
        resourceAttributes:
          nay-key: nay-value
  sampling:
    client: 100
    random: 100
    overall: 100
  labels:
    - name: c-env-tag
      type: environment
      keyName: FLEX_NAME
      defaultValue: DEFAULT_VAL
    - name: c-header-tag
      type: requestHeader
      keyName: :method
      defaultValue: DEFAULT_METHOD
    - name: c-literal-tag
      type: literal
      defaultValue: the-tag
----

//end::export-http[]
